@@ -259,6 +259,20 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|fs
+operator|.
+name|RawLocalFileSystem
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|hbase
 operator|.
 name|HBaseTestingUtility
@@ -319,6 +333,18 @@ name|BytesWritable
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|mortbay
+operator|.
+name|log
+operator|.
+name|Log
+import|;
+end_import
+
 begin_comment
 comment|/**  * test the performance for seek.  *<p>  * Copied from  *<a href="https://issues.apache.org/jira/browse/HADOOP-3315">hadoop-3315 tfile</a>.  * Remove after tfile is committed and use the tfile version of this class  * instead.</p>  */
 end_comment
@@ -330,6 +356,14 @@ name|TestHFileSeek
 extends|extends
 name|TestCase
 block|{
+specifier|private
+specifier|static
+specifier|final
+name|boolean
+name|USE_PREAD
+init|=
+literal|true
+decl_stmt|;
 specifier|private
 name|MyOptions
 name|options
@@ -399,6 +433,29 @@ operator|new
 name|Configuration
 argument_list|()
 expr_stmt|;
+if|if
+condition|(
+name|options
+operator|.
+name|useRawFs
+condition|)
+block|{
+name|conf
+operator|.
+name|setClass
+argument_list|(
+literal|"fs.file.impl"
+argument_list|,
+name|RawLocalFileSystem
+operator|.
+name|class
+argument_list|,
+name|FileSystem
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+block|}
 name|conf
 operator|.
 name|setInt
@@ -1046,7 +1103,7 @@ name|getScanner
 argument_list|(
 literal|false
 argument_list|,
-literal|false
+name|USE_PREAD
 argument_list|)
 decl_stmt|;
 name|BytesWritable
@@ -1515,7 +1572,17 @@ init|=
 literal|1000
 decl_stmt|;
 name|long
+name|trialCount
+init|=
+literal|1
+decl_stmt|;
+name|long
 name|seed
+decl_stmt|;
+name|boolean
+name|useRawFs
+init|=
+literal|false
 decl_stmt|;
 specifier|static
 specifier|final
@@ -1953,6 +2020,52 @@ literal|'n'
 argument_list|)
 decl_stmt|;
 name|Option
+name|trialCount
+init|=
+name|OptionBuilder
+operator|.
+name|withLongOpt
+argument_list|(
+literal|"trials"
+argument_list|)
+operator|.
+name|withArgName
+argument_list|(
+literal|"n"
+argument_list|)
+operator|.
+name|hasArg
+argument_list|()
+operator|.
+name|withDescription
+argument_list|(
+literal|"specify how many times to run the whole benchmark"
+argument_list|)
+operator|.
+name|create
+argument_list|(
+literal|'t'
+argument_list|)
+decl_stmt|;
+name|Option
+name|useRawFs
+init|=
+name|OptionBuilder
+operator|.
+name|withLongOpt
+argument_list|(
+literal|"rawfs"
+argument_list|)
+operator|.
+name|withDescription
+argument_list|(
+literal|"use raw instead of checksummed file system"
+argument_list|)
+operator|.
+name|create
+argument_list|()
+decl_stmt|;
+name|Option
 name|help
 init|=
 name|OptionBuilder
@@ -2035,6 +2148,16 @@ operator|.
 name|addOption
 argument_list|(
 name|file
+argument_list|)
+operator|.
+name|addOption
+argument_list|(
+name|trialCount
+argument_list|)
+operator|.
+name|addOption
+argument_list|(
+name|useRawFs
 argument_list|)
 operator|.
 name|addOption
@@ -2252,6 +2375,31 @@ operator|.
 name|getOptionValue
 argument_list|(
 literal|'n'
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|line
+operator|.
+name|hasOption
+argument_list|(
+literal|'t'
+argument_list|)
+condition|)
+block|{
+name|trialCount
+operator|=
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|line
+operator|.
+name|getOptionValue
+argument_list|(
+literal|'t'
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -2510,6 +2658,15 @@ argument_list|)
 throw|;
 block|}
 block|}
+name|useRawFs
+operator|=
+name|line
+operator|.
+name|hasOption
+argument_list|(
+literal|"rawfs"
+argument_list|)
+expr_stmt|;
 name|proceed
 operator|=
 literal|true
@@ -2700,6 +2857,36 @@ name|options
 operator|=
 name|options
 expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|options
+operator|.
+name|trialCount
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|Log
+operator|.
+name|info
+argument_list|(
+literal|"Beginning trial "
+operator|+
+operator|(
+name|i
+operator|+
+literal|1
+operator|)
+argument_list|)
+expr_stmt|;
 name|testCase
 operator|.
 name|setUp
@@ -2715,6 +2902,7 @@ operator|.
 name|tearDown
 argument_list|()
 expr_stmt|;
+block|}
 block|}
 block|}
 end_class
